--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -320,24 +320,43 @@
                         <div id="slider-2" class="owl-carousel owl-theme-2">
                             <div class="slider-popular">
                                 <img src="img/funtome-blog/slider/slider-1.png" alt="">
-                                
+                                <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
                             </div>
                             <div class="slider-popular">
-                                <img src="img/funtome-blog/slider/slider-1.png" alt="">
+                                <img src="img/funtome-blog/slider/slider-2.png" alt="">
+                                <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
                             </div>
                             <div class="slider-popular">
-                                <img src="img/funtome-blog/slider/slider-1.png" alt="">
+                                <img src="img/funtome-blog/slider/slider-3.png" alt="">
+                                <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
                             </div>
 
                             <div class="slider-popular">
                                 <img src="img/funtome-blog/slider/slider-1.png" alt="">
+                                <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
                             </div>
                             <div class="slider-popular">
-                                <img src="img/funtome-blog/slider/slider-1.png" alt="">
+                                <img src="img/funtome-blog/slider/slider-2.png" alt="">
+                                <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
                             </div>
                             <div class="slider-popular">
-                                <img src="img/funtome-blog/slider/slider-1.png" alt="">
+                                <img src="img/funtome-blog/slider/slider-3.png" alt="">
+                                <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
                             </div>
+
+                            <div class="slider-popular">
+                                <img src="img/funtome-blog/slider/slider-1.png" alt="">
+                                <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
+                            </div>
+                            <div class="slider-popular">
+                                <img src="img/funtome-blog/slider/slider-2.png" alt="">
+                                <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
+                            </div>
+                            <div class="slider-popular">
+                                <img src="img/funtome-blog/slider/slider-3.png" alt="">
+                                <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
+                            </div>
+                            
                         </div>    
                     </div>    
                 </div>
