Blog Finish Hover

--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -114,19 +114,19 @@
             <div class="blog-menu">
                 <ul class="blog-menu-nav">
                     <li class="link-news">
-                        <a href="#">Новости</a>
+                        <a class="nav-link" href="#">Новости</a>
                     </li>
-                    <li class="link-relise">
-                        <a href="#">Пресс-релизы</a>
+                    <li class="link-news">
+                        <a class="nav-link" href="#">Пресс-релизы</a>
                     </li>
-                    <li class="link-analitic">
-                        <a href="#">Аналитика</a>
+                    <li class="link-news">
+                        <a class="nav-link" href="#">Аналитика</a>
                     </li>
-                    <li class="link-interesting">
-                        <a href="#">Интересное</a>
+                    <li class="link-news">
+                        <a class="nav-link" href="#">Интересное</a>
                     </li>
-                    <li class="link-humor">
-                        <a href="#">Юмор</a>
+                    <li class="link-news">
+                        <a class="nav-link" href="#">Юмор</a>
                     </li>
                 </ul>
             </div>
@@ -356,7 +356,7 @@
                                 <img src="img/funtome-blog/slider/slider-3.png" alt="">
                                 <div class="name-text">Name of Title 2019 New Blog <br> Funtome Messager</div>
                             </div>
-                            
+
                         </div>    
                     </div>    
                 </div>
