Header White End

--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -139,7 +139,7 @@
                         <div class="news-section"> <!-- New section -->
                             <img class="img-news" src="img/funtome-blog/news/news-1-min.png" alt="">
 
-                            <div class="news-title">Хайп в молодежном сленге - простыми словами</div>
+                            <a class="news-title" href="funtome_blog_str_1.html">Хайп в молодежном сленге - простыми словами</a>
                             <div class="news-subtitle">
                                 <p class="style-text-blog bold">Начнем с того, что сетевой сленг очень популярен</p>
                                 <p class="style-text-blog">«Хайп» уже больше двух лет занимает лидирующие позиции в
@@ -166,7 +166,7 @@
                         <div class="news-section"> <!-- New section-->
                             <img class="img-news" src="img/funtome-blog/news/news-2-min.png" alt="">
 
-                            <div class="news-title">Что такое флекс</div>
+                            <a class="news-title" href="funtome_blog_str_1.html">Что такое флекс</a>
                             <div class="news-subtitle">
                                 <p class="style-text-blog bold">Пофлексим?</p>
                                 <p class="style-text-blog">В музыкальной индустрии постоянно рождаются новые слова и
@@ -195,7 +195,7 @@
                         <div class="news-section"> <!-- New section -->
                             <img class="img-news" src="img/funtome-blog/news/news-3-min.png" alt="">
 
-                            <div class="news-title">РОФЛ? Что это?</div>
+                            <a class="news-title" href="funtome_blog_str_1.html">РОФЛ? Что это?</a>
                             <div class="news-subtitle">
                                 <p class="style-text-blog bold">Откуда берутся эти странные слова</p>
                                 <p class="style-text-blog">«РОФЛ!!!» Или: «Да ты РОФЛИШЬ!» – фразы, которые сегодня видел и слышал практически каждый. Сегодня все чаще в интернет-пространстве и не только встречаются странные слова, о значении которых мы можем только догадываться. Мир постоянно меняется и язык, как средство его восприятия и выражения, тоже не стоит на месте. Множество новых слов приходит из английского: таски, дедлайны, чекать. Особенно активно англоязычные...</p>
@@ -218,7 +218,7 @@
                         <div class="news-section"> <!-- New section-->
                             <img class="img-news" src="img/funtome-blog/news/news-4-min.png" alt="">
 
-                            <div class="news-title">ЭМОДЗИ или ЭМОДЖИ?</div>
+                            <a class="news-title" href="funtome_blog_str_1.html">ЭМОДЗИ или ЭМОДЖИ?</a>
                             <div class="news-subtitle">
                                 <p class="style-text-blog bold">Немного предыстории</p>
                                 <p class="style-text-blog">Все началось с картинки. Ведь действительно, в самом начале, еще до того, как придумать письмо, люди рисовали свои послания. Визуализировать – это естественно для человека. Картинка – это возможность кратко, но емко передать сообщение, изобразить его.
@@ -242,7 +242,7 @@
                         <div class="news-section"> <!-- New section -->
                             <img class="img-news" src="img/funtome-blog/news/news-5-min.png" alt="">
 
-                            <div class="news-title">ЧСВ</div>
+                            <a class="news-title" href="funtome_blog_str_1.html">ЧСВ</a>
                             <div class="news-subtitle">                                
                                 <p class="style-text-blog">Здравствуйте, уважаемые читатели! Сегодня мы с вами разберем, что такое ЧСВ и как быть, если сетевое пространство с детской непосредственностью советует то понижать его, то повышать.</p>
                                 <p class="style-text-blog bold">Понятие и философия ЧСВ</p>    
@@ -266,7 +266,7 @@
                         <div class="news-section"> <!-- New section-->
                             <img class="img-news" src="img/funtome-blog/news/news-6-min.png" alt="">
 
-                            <div class="news-title">Кэшбэк – отличный способ получать прибыль от покупок</div>
+                            <a class="news-title" href="funtome_blog_str_1.html">Кэшбэк - отличный способ получать прибыль от покупок</a>
                             <div class="news-subtitle">
                                 <p class="style-text-blog">Вот уже несколько лет подряд на просторах интернета и в банковской сфере мы часто видим слово «кэшбэк». Что это такое, кому и зачем он выгоден, мы разберемся в этой статье.</p>
                                 <p class="style-text-blog">Термин cashback пришел из английского языка и буквально обозначает «возврат наличных денег» на счет платежной карты либо на счет аккаунта, если речь идет о кэшбэк-сервисе. При оплате товаров или услуг при...</p>
