News Blog First Finish

--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -68,28 +68,54 @@
 
     <div class="content">
 
+        <div class="icon-social">
+            <a href="#" class="icon-fixet">
+                <img src="img/icon/inst.png" alt="">
+            </a>
+            <a href="#" class="icon-fixet">
+                <img src="img/icon/facebook.png" alt="">
+            </a>
+            <a href="#" class="icon-fixet">
+                <img src="img/icon/vk.png" alt="">
+            </a>
+            <a href="#">
+                <img src="img/icon/youtube.png" alt="">
+            </a>
+        </div>
+
         <div class="container">
             <div class="news-blog-first">
                 <div class="news-data">
                     <h2 class="news-data-name">Новости</h2>
                     <div class="news-data-data">04 декабря 2019</div>
                 </div>
-                <div class="news-name-title">Хайп в молодежном сленге – простыми словами</div>
+                <div class="news-name-title">Хайп в молодежном сленге – <br>простыми словами</div>
                 <div class="news-like-social">
                     <div class="news-like-view">
                         <div class="news-view">
-                            <img src="img/funtome-blog/view.png" alt="">
+                            <img class="view" src="img/funtome-blog/view.png" alt="">
                             <h4>1266</h4>
                         </div>
                         <div class="news-like">
-                            <img src="img/funtome-blog/like.png" alt="">
+                            <img class="like" src="img/funtome-blog/like.png" alt="">
                             <h4>876</h4>
                         </div>
                     </div>
-                    <div class="news-social"></div>
+                    <div class="news-social">
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/inst.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/twit.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/face.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/vk.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/odnok.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/add.svg" alt=""></a>
+                    </div>
                 </div>
             </div>
         </div>    <!-- container end -->
+
+        <div class="banner-news">
+            <img src="img/funtome-blog/banner_news.jpg" alt="">
+        </div>
         
     </div> <!-- content end -->
 
