Text-content finish

--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -116,6 +116,55 @@
         <div class="banner-news">
             <img src="img/funtome-blog/banner_news.jpg" alt="">
         </div>
+
+        <div class="container">
+            <div class="text-content">
+                <div class="news-content">
+                    <div class="news-content-text">
+                        <h2 class="news-title">Начнем с того, что сетевой сленг очень популярен</h2>
+                        <h3 class="news-subtitle">«Хайп» уже больше двух лет занимает лидирующие позиции в списках главных неологизмов. Да, Интернет здесь сыграл ключевую роль. Через него вообще буквально все распространяется как вирус. Говоря о языке, сегодня границы между сетью и реальным миром уже сложно обозначить.</h3>
+                        <h2 class="news-title">Хайп – как это?</h2>
+                        <h3 class="news-subtitle">Слово является калькой английского hype, в русском языке подразумевается следующее:</h3>
+                        <h3 class="news-subtitle">1. Ажиотаж (кстати, тоже заимствование 😊), шумиха, популярность</h3>
+                        <h3 class="news-subtitle">2. Назойливое продвижение, раздувание, вводящая в заблуждение реклама, цель которой – стимуляция</h3>
+                        <h3 class="news-subtitle">Для удобства использования родился производный глагол «хайпить», т.е. поднимать этот самый ажиотаж, шумиху; назойливо продвигать, раскручивать что-либо в Интернете, медиа и т.д, а также прилагательное «хайповый». При этом модальность может быть как положительной, так и отрицательной. </h3>
+                        <h2 class="news-title">Кто и на чем хайпит</h2>
+                        <h3 class="news-subtitle">Хайпить на личности, событии – обычное дело для блогеров, СМИ, музыкантов, брендов. Без учета влияния медиаресурсов многие и многое оказалось бы невостребованным. Хотя справедливо признать, что и медиаресурсы сами порой хайпят на какой-либо теме. Однако хайп – явление временное, ведь непрерывность потока информации влечет за собой потерю интереса к зачастую искусственной сенсационности. На хайпе сегодня дива Оля Бузова, перебравшаяся на YouTube Ксения Собчак, всеми правдами и неправдами хайпить пытается Андрей Малахов, не стесняясь переходить границы здравого смысла, хайповал Гоша Рубчинский с хайповым шмотом, хайпанули Оксиморон с Гнойным, много хайпили на трагическом событии в Кемерово в 2018 году, свадьбе принца Гарри и Меган Маркл, релизах новых айфонов. В общем, слово лаконичное. </h3>
+                        <img class="photo-str-1" src="img/funtome-blog/photo-str-1.jpg" alt="">
+                        <h2 class="news-title">Происхождение хайпа</h2>
+                        <h3 class="news-subtitle">Почему хайп именно хайп? Стопроцентной правдивой истории происхождения нет, но лингвисты предлагают несколько интересных версий. Вероятно, hype – производное от hyperbole, «преувеличение», или префикса hyper, «сверх». Также может происходить от распространенного когда-то в преступном мире hyper, «мошенника». Существуют теории о том, что повлиять мог и сленг наркоманов, в котором hype – сокращение от hypodermic needle, медицинской иглы. А в начале 18го века hypochondria, ипохондрия, была известна как hyp. </h3>
+                        <h2 class="news-title">HYIP</h2>
+                        <h3 class="news-subtitle">Часто можно наткнуться на выражения из сферы бизнеса: «хайп в интернете», «хайп-проект». Здесь все завязано на другом слове – HYIP. Аббревиатура расшифровывается как High Yield Investment Program, т.е. сетевой инвестиционный проект с высоким доходом. Этот феномен сродни явлению финансовой пирамиды. Подробно c инвестиционными хайпами можно ознакомиться в материалах для биржевых экспертов. 😊</h3>
+                    </div>    
+                    <div class="news-social">
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/inst.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/twit.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/face.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/vk.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/odnok.svg" alt=""></a>
+                        <a href="#"><img class="news-social-syle" src="img/funtome-blog/icon-social/add.svg" alt=""></a>
+                    </div>
+                </div>    
+
+                <div class="news-bar">
+                    <div class="blok-search">
+                        <input type="Search">
+                    </div>
+                    <div class="blok-article">
+                        <div class="article-text">Последние статьи</div>
+                        <div class="blok-content">
+                            <img class="mr20" src="img/funtome-blog/article-1.png" alt="">
+                            <div class="blok-content-title">  
+                                <h4 class="blok-content-text">Хайп в молодежном сленге – <br>простыми словами</h4>
+                                <h4 class="blok-content-data">2 декабря 2019</h4>
+                            </div>      
+                        </div>
+                    </div>
+                    <div class="blok-categories"></div>
+                    
+                </div>    
+            </div>
+        </div>
         
     </div> <!-- content end -->
 
