--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -153,14 +153,55 @@
                     <div class="blok-article">
                         <div class="article-text">Последние статьи</div>
                         <div class="blok-content">
-                            <img class="mr20" src="img/funtome-blog/article-1.png" alt="">
+                            <div class="blok-content-img mr20">
+                                <img class="blok-img" src="img/funtome-blog/article-1.png" alt="">
+                            </div>    
                             <div class="blok-content-title">  
-                                <h4 class="blok-content-text">Хайп в молодежном сленге – <br>простыми словами</h4>
-                                <h4 class="blok-content-data">2 декабря 2019</h4>
+                                <span class="blok-content-text">Хайп в молодежном сленге – простыми словами</span>
+                                <span class="blok-content-data">2 декабря 2019</span>
+                            </div>      
+                        </div>
+                        <div class="blok-content">
+                            <div class="blok-content-img mr20">
+                                <img class="blok-img" src="img/funtome-blog/article-2.png" alt="">
+                            </div>   
+                            <div class="blok-content-title">  
+                                <span class="blok-content-text">Что такое флекс</span>
+                                <span class="blok-content-data">2 декабря 2019</span>
+                            </div>      
+                        </div>
+                        <div class="blok-content">
+                            <div class="blok-content-img mr20">
+                                <img class="blok-img" src="img/funtome-blog/article-3.png" alt="">
+                            </div>   
+                            <div class="blok-content-title">  
+                                <span class="blok-content-text">РОФЛ? Что это?</span>
+                                <span class="blok-content-data">2 декабря 2019</span>
                             </div>      
                         </div>
                     </div>
-                    <div class="blok-categories"></div>
+                    <div class="blok-categories">
+                        <div class="article-text">Категории</div>
+                        <div class="nav-categories">
+                            <ul class="nav-categories-blok">
+                                <li class="nav-categories-link">
+                                    <a href="#">Новости</a>
+                                </li>
+                                <li class="nav-categories-link">
+                                    <a href="#">Пресс-релизы</a>
+                                </li>
+                                <li class="nav-categories-link">
+                                    <a href="#">Аналитика</a>
+                                </li>
+                                <li class="nav-categories-link">
+                                    <a href="#">Интересное</a>
+                                </li>
+                                <li class="nav-categories-link">
+                                    <a href="#">Юмор</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     
                 </div>    
             </div>
