--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -202,6 +202,33 @@
                             </ul>
                         </div>
                     </div>
+
+                    <div class="blok-social">
+                        <div class="bloc-social-icon">
+                            <ul class="nav-icon">
+                                <li class="nav-icon-link">
+                                    <a href="#" class="nav-icon-link-img">
+                                        <img src="img/funtome-blog/icon-social/nav-icon-youtube.svg" alt="">
+                                    </a>
+                                </li>
+                                <li class="nav-icon-link">
+                                    <a href="#" class="nav-icon-link-img">
+                                        <img src="img/funtome-blog/icon-social/nav-icon-face.svg" alt="">
+                                    </a>
+                                </li>
+                                <li class="nav-icon-link">
+                                    <a href="#" class="nav-icon-link-img">
+                                        <img src="img/funtome-blog/icon-social/nav-icon-inst.svg" alt="">
+                                    </a>
+                                </li>
+                                <li class="nav-icon-link">
+                                    <a href="#" class="nav-icon-link-img">
+                                        <img src="img/funtome-blog/icon-social/nav-icon-vk.svg" alt="">
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                     
                 </div>    
             </div>
