User-comments-blok finish

--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -9,9 +9,8 @@
     <title>Funtome</title>
     <meta name="description" content="Mobile product company"/>
 
-    <link
-            href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700|Roboto:300,400&display=swap&subset=cyrillic,cyrillic-ext"
-            rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="/js/owlCarousel/owl.carousel.min.css">
     <link rel="stylesheet" href="/js/owlCarousel/owl.theme.default.css">
@@ -228,12 +227,52 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>   
+
+                </div> <!-- news-bar end -->
+            </div> <!-- text-content end -->
+
+            <div class="section-comments">                
+                <div class="title-comments">
+                    <h1 class="title-comments-style mr20">Комментарии</h1>
+                    <h1 class="title-comments-style bold-style">(5)</h1>
+                </div>
+                <div class="comments-form">    
+                    <div class="add-comments">
+                        <div class="comments-form-text">
+                            <div class="comments-text">Оставьте комментарий</div>
+                            <div class="sing-in-text">Чтобы оставить комментарий, необходимо <span class="sing-in-text text-green">войти</span> или <span class="sing-in-text text-green">зарегистрироваться</span></div>
+                        </div>
                     </div>
-                    
-                </div>    
-            </div>
-        </div>
-        
+                </div>
+                <div class="user-comments-block">
+                    <div class="user-comments">
+                        <div class="user-photo mr20">
+                            <svg width="140" height="140">
+                                <pattern id="pattern" width="100%" height="100%">
+                                   <image href="img/funtome-blog/user-photo/ea0b5feba64bf5ce126f5a961bae7a08_ce_3216x2006x0x0_cropped_960x600.jpg" width="140" height="140" preserveAspectRatio="xMidYMin slice"></image>
+                                </pattern>
+                                <circle cx="70" cy="70" r="70" fill="url(#pattern)"></circle>
+                             </svg>
+                        </div>
+                        <div class="block-comments">
+                            <div class="user-name">
+                                <h3 class="name mr30">Name Name</h3>
+                                <h4 class="data">June 24, 2019</h4>
+                            </div>
+                            <div class="user-text">
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                            </div>
+                            <div class="user-replay">
+                                <span>Replay</span>
+                            </div>
+                        </div>    
+                    </div>
+
+                </div>
+            </div> <!-- section-comments end -->
+
+        </div> <!-- container end -->
     </div> <!-- content end -->
 
     <footer>
