--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -245,14 +245,15 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="user-comments-block">
                     <div class="user-comments">
                         <div class="user-photo mr20">
                             <svg width="140" height="140">
-                                <pattern id="pattern" width="100%" height="100%">
-                                   <image href="img/funtome-blog/user-photo/ea0b5feba64bf5ce126f5a961bae7a08_ce_3216x2006x0x0_cropped_960x600.jpg" width="140" height="140" preserveAspectRatio="xMidYMin slice"></image>
+                                <pattern id="pattern-1" width="100%" height="100%">
+                                   <image href="img/funtome-blog/user-photo/user-1.png" width="140" height="140" preserveAspectRatio="xMidYMin slice"></image>
                                 </pattern>
-                                <circle cx="70" cy="70" r="70" fill="url(#pattern)"></circle>
+                                <circle cx="70" cy="70" r="70" fill="url(#pattern-1)"></circle>
                              </svg>
                         </div>
                         <div class="block-comments">
@@ -267,10 +268,128 @@
                                 <span>Replay</span>
                             </div>
                         </div>    
-                    </div>
+                    </div> <!-- user-comments end -->
 
-                </div>
+                    <div class="user-comments">
+                        <div class="user-photo mr20">
+                            <svg width="140" height="140">
+                                <pattern id="pattern-2" width="100%" height="100%">
+                                   <image href="img/funtome-blog/user-photo/user-2.png" width="140" height="140" preserveAspectRatio="xMidYMin slice"></image>
+                                </pattern>
+                                <circle cx="70" cy="70" r="70" fill="url(#pattern-2)"></circle>
+                             </svg>
+                        </div>
+                        <div class="block-comments">
+                            <div class="user-name">
+                                <h3 class="name mr30">Name Name</h3>
+                                <h4 class="data">June 24, 2019</h4>
+                            </div>
+                            <div class="user-text">
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                            </div>
+                            <div class="user-replay">
+                                <span>Replay</span>
+                            </div>
+                        </div>    
+                    </div> <!-- user-comments end -->
+
+                    <div class="user-comments">
+                        <div class="user-photo mr20">
+                            <svg width="140" height="140">
+                                <pattern id="pattern-3" width="100%" height="100%">
+                                   <image href="img/funtome-blog/user-photo/user-3.png" width="140" height="140" preserveAspectRatio="xMidYMin slice"></image>
+                                </pattern>
+                                <circle cx="70" cy="70" r="70" fill="url(#pattern-3)"></circle>
+                             </svg>
+                        </div>
+                        <div class="block-comments">
+                            <div class="user-name">
+                                <h3 class="name mr30">Name Name</h3>
+                                <h4 class="data">June 24, 2019</h4>
+                            </div>
+                            <div class="user-text">
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                            </div>
+                            <div class="user-replay">
+                                <span>Replay</span>
+                            </div>
+                            <div class="block-replay">
+                                <div class="user-photo-replay mr20">
+                                    <svg width="70" height="70">
+                                        <pattern id="pattern-6" width="100%" height="100%">
+                                           <image href="img/funtome-blog/user-photo/user-replay.png" width="70" height="70" preserveAspectRatio="xMidYMin slice"></image>
+                                        </pattern>
+                                        <circle cx="35" cy="35" r="35" fill="url(#pattern-6)"></circle>
+                                     </svg>
+                                </div>
+                                <div class="replay-comments-block">
+                                    <div class="replay-comments">
+                                        <textarea name="message" cols="30" rows='10' class="replay-form" placeholder="Replay"></textarea>
+                                    </div>
+                                    <!-- <div class="replay-button">
+                                        <a href="#" class="butt-green-border">
+                                            <span class="butt-text">Cancel</span>
+                                        </a>
+                                    </div>    -->
+                                </div>
+                            </div>    
+                        </div>    
+                    </div> <!-- user-comments end -->
+
+                    <div class="user-comments">
+                        <div class="user-photo mr20">
+                            <svg width="140" height="140">
+                                <pattern id="pattern-4" width="100%" height="100%">
+                                   <image href="img/funtome-blog/user-photo/user-4.png" width="140" height="140" preserveAspectRatio="xMidYMin slice"></image>
+                                </pattern>
+                                <circle cx="70" cy="70" r="70" fill="url(#pattern-4)"></circle>
+                             </svg>
+                        </div>
+                        <div class="block-comments">
+                            <div class="user-name">
+                                <h3 class="name mr30">Name Name</h3>
+                                <h4 class="data">June 24, 2019</h4>
+                            </div>
+                            <div class="user-text">
+                                There are many variations of passages of Lorem Ipsum available.
+                            </div>
+                            <div class="user-replay">
+                                <span>Replay</span>
+                            </div>
+                        </div>    
+                    </div> <!-- user-comments end -->
+
+                    <div class="user-comments">
+                        <div class="user-photo mr20">
+                            <svg width="140" height="140">
+                                <pattern id="pattern-5" width="100%" height="100%">
+                                   <image href="img/funtome-blog/user-photo/user-5.png" width="140" height="140" preserveAspectRatio="xMidYMin slice"></image>
+                                </pattern>
+                                <circle cx="70" cy="70" r="70" fill="url(#pattern-5)"></circle>
+                             </svg>
+                        </div>
+                        <div class="block-comments">
+                            <div class="user-name">
+                                <h3 class="name mr30">Name Name</h3>
+                                <h4 class="data">June 24, 2019</h4>
+                            </div>
+                            <div class="user-text">
+                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+                            </div>
+                            <div class="user-replay">
+                                <span>Replay</span>
+                            </div>
+
+                        </div>    
+                    </div> <!-- user-comments end -->
+
+                </div> <!-- user-comments-block -->
             </div> <!-- section-comments end -->
+
+            <div class="conditiuns">
+                <a href="#" class="style-conditions mr50">Условия пользования</a>
+                <a href="#" class="style-conditions">Политика конфиденциальности</a>
+            </div>
 
         </div> <!-- container end -->
     </div> <!-- content end -->
