--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -147,7 +147,9 @@
 
                 <div class="news-bar">
                     <div class="blok-search">
-                        <input type="Search">
+                        <input class="input-search mr20" type="text" placeholder="Search" color="#D5D5D5" >
+                        <img class="search-photo" src="img/funtome-blog/Search.svg" alt="">
+
                     </div>
                     <div class="blok-article">
                         <div class="article-text">Последние статьи</div>
