--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -328,11 +328,14 @@
                                     <div class="replay-comments">
                                         <textarea name="message" cols="30" rows='10' class="replay-form" placeholder="Replay"></textarea>
                                     </div>
-                                    <!-- <div class="replay-button">
-                                        <a href="#" class="butt-green-border">
-                                            <span class="butt-text">Cancel</span>
+                                    <div class="replay-button">
+                                        <a href="#" class="butt-border mr20">
+                                            <span class="butt-border-text">Cancel</span>
                                         </a>
-                                    </div>    -->
+                                        <a href="#" class="butt-border">
+                                            <span class="butt-border-text">Post</span>
+                                        </a>                                        
+                                    </div>   
                                 </div>
                             </div>    
                         </div>    
