Funtome blog str first FINISH

--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -302,6 +302,32 @@
                     </div>
                 </div>
 
+                <div class="form-user-comments-text">
+                    <div class="form-border">
+                        <div class="form-title">Оставьте комментарий</div>
+                        <div class="block-user-photo-text">
+                            <div class="user-photo mr20">
+                                <svg width="140" height="140">
+                                    <pattern id="pattern-1" width="100%" height="100%">
+                                       <image href="img/funtome-blog/user-photo/user-1.png" width="140" height="140" preserveAspectRatio="xMidYMin slice"></image>
+                                    </pattern>
+                                    <circle cx="70" cy="70" r="70" fill="url(#pattern-1)"></circle>
+                                 </svg>
+                            </div>
+                            <div class="group-user-message">
+                                <div class="user-form-text">
+                                    <textarea name="message" cols="30" rows='10' class="user-from-text-style" placeholder="Текст сообщения"></textarea>
+                                </div>
+                                <div class="button-mess">
+                                    <a href="#" class="butt-border-message">
+                                        <span class="butt-border-message-style">Отправить</span>
+                                    </a>                                      
+                                </div> 
+                            </div>      
+                        </div>
+                    </div>
+                </div>
+
                 <div class="user-comments-block">
                     <div class="user-comments">
                         <div class="user-photo mr20">
