--- a/funtome_blog.html
+++ b/funtome_blog.html
@@ -52,7 +52,7 @@
                         <a href="#">поддержка</a>
                     </li>
                     <li class="link-paki">
-                        <a href="#">паки</a>
+                        <a href="funtome_paki.html">паки</a>
                     </li>
                 </ul>
             </div>
