--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -52,7 +52,7 @@
                         <a href="#">поддержка</a>
                     </li>
                     <li class="link-paki">
-                        <a href="#">паки</a>
+                        <a href="funtome_paki.html">паки</a>
                     </li>
                 </ul>
             </div>
@@ -475,14 +475,6 @@
                 <a href="#" class="style-conditions mr50">Условия пользования</a>
                 <a href="#" class="style-conditions">Политика конфиденциальности</a>
             </div>
-
-            <svg class="svg">
-                <clipPath id="my-clip-path" clipPathUnits="objectBoundingBox">
-                    <path d="M0.018,0.063 C0.018,0.038,0.04,0.017,0.067,0.017 L0.378,0.017 C0.386,0.017,0.394,0.02,0.4,0.025 C0.419,0.043,0.468,0.083,0.518,0.083 C0.567,0.083,0.616,0.043,0.636,0.025 C0.641,0.02,0.649,0.017,0.657,0.017 L0.968,0.017 C0.996,0.017,1,0.038,1,0.063 V0.97 C1,0.996,0.996,1,0.968,1 H0.644 H0.518 H0.391 H0.067 C0.04,1,0.018,0.996,0.018,0.97 L0.018,0.063"></path></clipPath>
-              </svg>
-              
-              <div class="clipped"></div>   
-
         </div> <!-- container end -->
     </div> <!-- content end -->
 
