--- a/funtome_paki.html
+++ b/funtome_paki.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="/js/owlCarousel/owl.theme.default.css">
 
     <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/style-funtome-paki.css">
     <!-- <link rel="stylesheet" href="css/media/media.css"> -->
 
 </head>
@@ -51,8 +52,8 @@
                     <li class="link-help">
                         <a href="#">поддержка</a>
                     </li>
-                    <li class="link-paki">
-                        <a href="#">паки</a>
+                    <li class="funtome-paki">
+                        <a href="funtome_paki.html">паки</a>
                     </li>
                 </ul>
             </div>
@@ -110,8 +111,39 @@
 
         <!-- Content block -->
         <div class="content-block">
+            <div class="container">  
 
-            
+                <div class="block-menu-bar">
+                    <div class="sorting-pak"></div>
+                    <div class="search-block"></div>
+                    <div class="structure"></div>
+                </div>
+
+                <div class="paki-catalog">
+
+                    <div class="card-paki">
+                        <div class="photo-paki">
+                            <div class="photo-paki-style" width="285" height="300">
+                                    <svg class="svg-style" width="285" height="300" viewBox="0 0 285 300" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                        <path d="M 5 19 C 5 11.268 11.268 5 19 5 L 107.846 5 C 110.104 5 112.251 5.9526 113.877 7.51852 C 119.415 12.8512 133.395 24.797 147.5 24.797 C 161.605 24.797 175.585 12.8512 181.123 7.51852 C 182.749 5.9526 184.896 5 187.154 5 L 276 5 C 283.732 5 290 11.268 290 19 V 291 C 290 298.732 283.732 305 276 305 H 183.609 H 147.5 H 111.391 H 19 C 11.268 305 5 298.732 5 291 L 5 19 Z" stroke="#DEE2EA" stroke-width="2" stroke-opacity="0.3"></path>
+                                        <path d="M 5 19 C 5 11.268 11.268 5 19 5 L 107.846 5 C 110.104 5 112.251 5.9526 113.877 7.51852 C 119.415 12.8512 133.395 24.797 147.5 24.797 C 161.605 24.797 175.585 12.8512 181.123 7.51852 C 182.749 5.9526 184.896 5 187.154 5 L 276 5 C 283.732 5 290 11.268 290 19 V 291 C 290 298.732 283.732 305 276 305 H 183.609 H 147.5 H 111.391 H 19 C 11.268 305 5 298.732 5 291 L 5 19 Z" stroke="#DEE2EA" stroke-width="2" fill="url(#pattern6)" stroke-opacity="0.3"></path>
+                                        <defs>
+                                            <pattern id="pattern6" width="100%" height="100%">           
+                                                <image id="image6" width="285" height="300" xlink:href="/img/funtome-paki/paki-img/pak-1.png" preserveAspectRatio="xMidYMid slice"></image>
+                                            </pattern>
+                                        </defs>
+                                    </svg>
+                            </div>         
+                        </div>
+                        <div class="description-paki">
+                            <div class="border-paki">
+                                <div class="title-paki">Зверуш</div>
+                                <div class="subtitle-paki">21 Картинка</div>
+                            </div>
+                        </div>
+                    </div>  
+
+                </div>
 
                 <div class="conditiuns">
                     <a href="#" class="style-conditions mr50">Условия пользования</a>
@@ -119,7 +151,7 @@
                 </div>
             </div>
         </div> <!-- content-block end -->
-    </div>
+    </div> <!-- content end -->
 
     <footer>
         <div class="footer">
