--- a/funtome_blog_str_1.html
+++ b/funtome_blog_str_1.html
@@ -49,7 +49,8 @@
                         <a href="funtome_blog.html">блог</a>
                     </li>
                     <li class="link-help">
-                        <a href="#">поддержка</a>
+                        <a href="funtome_support.html">поддержка</a>
+
                     </li>
                     <li class="link-paki">
                         <a href="funtome_paki.html">паки</a>
